--- a/index.html
+++ b/index.html
@@ -46,42 +46,42 @@
                     </p>
                     <ul class="tech-stack">
                         <li>Palantir Foundry</li>
-                        <li>Gotham</li>
+                        <li>Ontology</li>
                         <li>AIP</li>
                     </ul>
-                    <a href="#contact" class="btn-link" onclick="prefillForm('foundry')">INITIALIZE PROTOCOL &rarr;</a>
+                    <a href="foundry_ops.html" class="btn-link">ACCESS DIVISION &rarr;</a>
                 </article>
 
                 <article class="hub-card">
                     <div class="card-status">
                         <span class="status-dot green"></span> ONLINE
                     </div>
-                    <h3>02 // NEURAL_NETS</h3>
+                    <h3>02 // TACTICAL_UI</h3>
                     <p class="hub-desc">
-                        Deployment of autonomous agents, LLM integration, and predictive modeling for business logic.
+                        Rapid deployment of Python-native data interfaces, dashboards, and AI-powered internal tools.
                     </p>
                     <ul class="tech-stack">
-                        <li>OpenAI API</li>
+                        <li>Streamlit</li>
                         <li>LangChain</li>
                         <li>Python</li>
                     </ul>
-                    <a href="#contact" class="btn-link" onclick="prefillForm('intel')">DEPLOY AGENTS &rarr;</a>
+                    <a href="tactical_ui.html" class="btn-link">ACCESS DIVISION &rarr;</a>
                 </article>
 
-                <article class="hub-card">
+                <article class="hub-card" style="border-color: var(--accent-primary);">
                     <div class="card-status">
-                        <span class="status-dot yellow"></span> HIGH_LOAD
+                        <span class="status-dot yellow"></span> NEW_VECTOR
                     </div>
-                    <h3>03 // DATA_CORE</h3>
+                    <h3>03 // KINETIC_EDGE</h3>
                     <p class="hub-desc">
-                        Robust ETL/ELT pipelines and cloud architecture. Turning raw signals into actionable intelligence.
+                        Physical layer extraction. Custom IoT sensors, 3D printed hardware, and Edge AI for hostile environments.
                     </p>
                     <ul class="tech-stack">
-                        <li>AWS / Azure</li>
-                        <li>Snowflake</li>
-                        <li>dbt</li>
+                        <li>Custom IoT</li>
+                        <li>Edge AI</li>
+                        <li>3D Print</li>
                     </ul>
-                    <a href="#contact" class="btn-link" onclick="prefillForm('ghost')">ACCESS CORE &rarr;</a>
+                    <a href="kinetic-edge.html" class="btn-link">ACCESS DIVISION &rarr;</a>
                 </article>
 
             </div>
@@ -154,7 +154,7 @@
                         <select name="operation">
                             <option value="intel">Operation: INTELLIGENCE (AI & Strategy)</option>
                             <option value="foundry">Operation: FOUNDRY (Palantir Deployment)</option>
-                            <option value="ghost">Operation: GHOST (Staff Augmentation)</option>
+                            <option value="kinetic">Operation: KINETIC (IoT & Edge AI)</option> <option value="ghost">Operation: GHOST (Staff Augmentation)</option>
                             <option value="academy">Operation: ACADEMY (Advanced Training)</option>
                         </select>
                     </div>
