--- a/nav.html
+++ b/nav.html
@@ -3,9 +3,9 @@
         <a href="index.html" class="nav-logo">KAIROS<span>PY</span>_</a>
         <ul>
             <li><a href="index.html">Ops_Center</a></li>
+            <li><a href="foundry_ops.html">Foundry</a></li>
+            <li><a href="tactical_ui.html">Tactical_UI</a></li> <li><a href="kinetic-edge.html">Kinetic</a></li>   <li><a href="proyectos.html">Case_Files</a></li>
             <li><a href="equipo.html">Network</a></li>
-            <li><a href="proyectos.html">Case_Files</a></li>
-            <li><a href="blog.html">Intel</a></li>
         </ul>
     </div>
 </nav>
