--- a/kinetic-edge.html
+++ b/kinetic-edge.html
@@ -130,8 +130,17 @@
 
     <footer class="footer">
         <div class="container">
+            <div style="margin-bottom: 2rem; padding-bottom: 2rem; border-bottom: 1px solid #333;">
+                <p style="font-family: var(--font-code); font-size: 0.8rem; color: var(--text-muted); margin-bottom: 0.5rem;">
+                    > DIRECT_CHANNEL_ESTABLISHED:
+                </p>
+                <a href="mailto:ops@kairospy.com" style="font-size: 1.2rem; color: #fff; text-decoration: none; border-bottom: 1px solid var(--accent-primary);">
+                    ops@kairospy.com
+                </a>
+            </div>
+            
             <p>&copy; 2025 KAIROSPY. All Operations Classified.</p>
-            <p style="font-family: var(--font-code); font-size: 0.8rem; color: #444;">EST. MADRID // GLOBAL OPS</p>
+            <p style="font-family: var(--font-code); font-size: 0.8rem; color: #444; margin-top: 1rem;">EST. MADRID // GLOBAL OPS</p>
         </div>
     </footer>
 
