--- a/blog.html
+++ b/blog.html
@@ -117,5 +117,8 @@
             alert("SECURITY ALERT: This document is classified.\n\nYou are being redirected to the Secure Uplink to request clearance.");
         }
     </script>
+    <!-- Cloudflare Web Analytics -->
+     <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "af1c2829514d4ed0ab6401de9f66a09b"}'></script>
+     <!-- End Cloudflare Web Analytics -->
 </body>
 </html>
