--- a/index.html
+++ b/index.html
@@ -315,5 +315,8 @@
             document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });
         }
     </script>
+    <!-- Cloudflare Web Analytics -->
+     <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "af1c2829514d4ed0ab6401de9f66a09b"}'></script>
+     <!-- End Cloudflare Web Analytics -->
 </body>
 </html>
