Add Privacy Protocol

--- a/blog.html
+++ b/blog.html
@@ -87,7 +87,9 @@
             </div>
             
             <p>&copy; 2025 KAIROSPY. All Operations Classified.</p>
-            <p style="font-family: var(--font-code); font-size: 0.8rem; color: #444; margin-top: 1rem;">EST. MADRID // GLOBAL OPS</p>
+            <p style="font-family: var(--font-code); font-size: 0.8rem; color: #444;">
+                EST. MADRID // <a href="privacy.html" style="color: #555; text-decoration: none; transition: color 0.3s;">PRIVACY_PROTOCOL</a>
+            </p>
         </div>
     </footer>
 
