included special_ops

--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
                     <a href="kinetic-edge.html" class="btn-link">ACCESS DIVISION &rarr;</a>
                 </article>
 
+                <article class="hub-card" style="border-color: #fff;">
+                    <div class="card-status">
+                        <span class="status-dot green"></span> ON_DEMAND
+                    </div>
+                    <h3>04 // SPECIAL_OPS</h3>
+                    <p class="hub-desc">
+                        Custom engineering for undefined problems. From rapid prototyping to legacy system rescue.
+                    </p>
+                    <ul class="tech-stack">
+                        <li>Full Stack</li>
+                        <li>Ad-Hoc</li>
+                        <li>Rescue</li>
+                    </ul>
+                    <a href="special_ops.html" class="btn-link">ACCESS DIVISION &rarr;</a>
+                </article>
+
             </div>
         </section>
 
