--- a/nav.html
+++ b/nav.html
@@ -1,11 +1,14 @@
 <nav class="main-nav">
     <div class="container nav-container">
         <a href="index.html" class="nav-logo">KAIROS<span>PY</span>_</a>
-        <ul>
-            <li><a href="index.html">Ops_Center</a></li>
-            <li><a href="foundry_ops.html">Foundry</a></li>
-            <li><a href="tactical_ui.html">Tactical_UI</a></li> <li><a href="kinetic-edge.html">Kinetic</a></li>   <li><a href="proyectos.html">Case_Files</a></li>
-            <li><a href="equipo.html">Network</a></li>
-        </ul>
+            <ul>
+                <li><a href="index.html">Ops_Center</a></li>
+                <li><a href="foundry_ops.html">Foundry</a></li>
+                <li><a href="tactical_ui.html">Tactical_UI</a></li> 
+                <li><a href="kinetic-edge.html">Kinetic</a></li>
+                <li><a href="special_ops.html">Special_Ops</a></li> 
+                <li><a href="proyectos.html">Case_Files</a></li>
+                <li><a href="equipo.html">Network</a></li>
+            </ul>
     </div>
 </nav>
