--- a/foundry_ops.html
+++ b/foundry_ops.html
@@ -39,14 +39,15 @@
         
         <section>
             <div style="border-left: 3px solid var(--accent-primary); padding-left: 1.5rem;">
-                <h2 style="border: none; margin-bottom: 0.5rem; font-size: 1.8rem;">The Ontology is the Asset</h2>
+                <h2 style="border: none; margin-bottom: 0.5rem; font-size: 1.8rem;">Ontology is the Asset</h2>
                 <p style="font-size: 1.1rem; color: var(--text-main);">
                     Most integrators treat Foundry like a glorified BI tool. That is a waste of capital. 
-                    We treat it as a <strong style="color: #fff;">digital twin</strong> of your operational reality.
+                    We treat it as the <strong style="color: #fff;">Cognitive Cortex</strong> of your enterprise.
                 </p>
                 <p style="color: var(--text-muted);">
-                    Our architects focus on the <strong>Ontology Layer</strong> first. We map objects, links, and actions 
-                    to mirror the physical world, enabling high-bandwidth decision loops that legacy ERPs cannot support.
+                    Our architects focus on the <strong>Ontology Layer</strong> first. We map objects, links, and actions to mirror the physical world. 
+                    This is the <strong>critical prerequisite for AIP</strong>. You cannot deploy Generative AI on messy data. 
+                    We build the semantic structure that allows AIP to reason, act, and execute high-bandwidth decision loops that legacy ERPs cannot support.
                 </p>
             </div>
         </section>
