--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
     <header class="hero">
         <div class="container hero-content">
+            
+            <div style="margin-bottom: 1.5rem;">
+                <img src="source/logo_nuevo_limpio.png" 
+                     alt="KAIROSPY IDENT" 
+                     style="max-width: 400px; width: 100%; mix-blend-mode: lighten; opacity: 1.; filter: contrast(1.1);">
+            </div>
             <div style="font-family: var(--font-code); color: var(--accent-primary); margin-bottom: 1.5rem; font-size: 0.9rem; opacity: 0.8;">
                 > DEFINITION: KAIROS (καιρός) // "The critical moment for AI action."
             </div>
