--- a/blog.html
+++ b/blog.html
@@ -92,23 +92,9 @@
             </p>
         </div>
     </footer>
-
+    
+    <script src="nav-loader.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            fetch('nav.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('navbar-placeholder').innerHTML = data;
-                    const currentPage = window.location.pathname.split('/').pop();
-                    const navLinks = document.querySelectorAll('.main-nav a');
-                    navLinks.forEach(link => {
-                        const linkPage = link.getAttribute('href').split('/').pop();
-                        if (linkPage === currentPage || (currentPage === '' && linkPage === 'index.html')) {
-                            link.classList.add('active');
-                        }
-                    });
-                });
-        });
 
         // Esta función guarda qué documento quería leer el usuario
         // Y cuando llegue al index, podríamos usarlo (opcional)
