--- a/kinetic-edge.html
+++ b/kinetic-edge.html
@@ -146,21 +146,8 @@
         </div>
     </footer>
 
+    <script src="nav-loader.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            fetch('nav.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('navbar-placeholder').innerHTML = data;
-                    const navLinks = document.querySelectorAll('.main-nav a');
-                    navLinks.forEach(link => {
-                        // Mark Kinetic as active
-                        if (link.getAttribute('href') === 'kinetic-edge.html') {
-                            link.classList.add('active');
-                        }
-                    });
-                });
-        });
 
         function requestHardware() {
             // Store intent
