--- a/privacy.html
+++ b/privacy.html
@@ -66,15 +66,8 @@
 
     </main>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 KAIROSPY. All Operations Classified.</p>
-            <p style="font-family: var(--font-code); font-size: 0.8rem; color: #444;">
-                EST. MADRID // <a href="privacy.html" style="color: #666; text-decoration: none;">PRIVACY_PROTOCOL</a>
-            </p>
-        </div>
-    </footer>
-    <script src="nav-loader.js"></script>
+    <div id="footer-placeholder"></div>
+    <script src="layout-loader.js"></script>
 
     <!-- Cloudflare Web Analytics -->
      <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "af1c2829514d4ed0ab6401de9f66a09b"}'></script>
