--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
                     <div class="form-group">
                         <label>OPERATION_TYPE</label>
                         <select name="operation">
-                            <option value="intel">Operation: INTELLIGENCE (AI & Strategy)</option>
                             <option value="foundry">Operation: FOUNDRY (Palantir Deployment)</option>
-                            <option value="kinetic">Operation: KINETIC (IoT & Edge AI)</option> <option value="ghost">Operation: GHOST (Staff Augmentation)</option>
-                            <option value="academy">Operation: ACADEMY (Advanced Training)</option>
+                            <option value="ghost">Operation: TACTICAL UI (Data Intelligence)</option>
+                            <option value="kinetic">Operation: KINETIC (IoT & Edge AI)</option> 
+                            <option value="intel">Operation: SPECIAL OPS (Tailor projects)</option>  
                         </select>
                     </div>
 
