pulido de contenido

--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <div id="navbar-placeholder"></div>
+    <div id="kairospy-header"></div>
 
     <header class="hero" style="height: 50vh;">
         <div class="container hero-content">
@@ -46,9 +45,9 @@
                     <span>ID: #RPT-2025-07</span>
                     <span class="clearance-tag">RESTRICTED</span>
                 </div>
-                <h3><a href="index.html#contact" onclick="requestAccess('Autonomous Agents Protocol')">Autonomous Agents in Fintech: A Security Protocol</a></h3>
+                <h3><a href="index.html#contact" onclick="requestAccess('Autonomous Agents Protocol')">Driven secure IA systems with Autonomous Agents</a></h3>
                 <p class="intel-excerpt">
-                    Deploying LLMs in regulated sectors requires more than prompt engineering. We break down a secure architecture using LangChain and private vector stores.
+                    Deploying LLMs in regulated sectors requires more than prompt engineering. We break down a secure architecture using all Palantir capacity.
                 </p>
                 <div class="intel-footer">
                     <span class="intel-date">FILED: JUL 28, 2025</span>
@@ -75,7 +74,6 @@
 
     </main>
 
-    <div id="footer-placeholder"></div>
     
     <script src="layout-loader.js"></script>
     <script>
@@ -92,5 +90,7 @@
     <!-- Cloudflare Web Analytics -->
      <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "af1c2829514d4ed0ab6401de9f66a09b"}'></script>
      <!-- End Cloudflare Web Analytics -->
+    <div id="kairospy-footer"></div>
+    <script src="components.js"></script>
 </body>
 </html>
