--- a/kinetic-edge.html
+++ b/kinetic-edge.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-    <div id="navbar-placeholder"></div>
+    <div id="kairospy-header"></div>
 
     <header class="hero" style="height: 60vh;">
         <div class="container hero-content">
@@ -128,7 +128,6 @@
 
     </main>
 
-    <div id="footer-placeholder"></div>
 
     <script src="layout-loader.js"></script>
     <script>
@@ -142,5 +141,7 @@
     <!-- Cloudflare Web Analytics -->
      <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "af1c2829514d4ed0ab6401de9f66a09b"}'></script>
      <!-- End Cloudflare Web Analytics -->
+    <div id="kairospy-footer"></div>
+    <script src="components.js"></script>
 </body>
 </html>
