--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div id="navbar-placeholder"></div>
+    <div id="kairospy-header"></div>
 
     <main class="container section-padding">
         
@@ -66,11 +66,12 @@
 
     </main>
 
-    <div id="footer-placeholder"></div>
     <script src="layout-loader.js"></script>
 
     <!-- Cloudflare Web Analytics -->
      <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "af1c2829514d4ed0ab6401de9f66a09b"}'></script>
      <!-- End Cloudflare Web Analytics -->
+    <div id="kairospy-footer"></div>
+    <script src="components.js"></script>
     </body>
 </html>
