--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div id="navbar-placeholder"></div>
+    <div id="kairospy-header"></div>
 
     <header class="hero">
         <div class="container hero-content">
@@ -276,7 +276,7 @@
         </section>
     </main>
 
-    <div id="footer-placeholder"></div>
+
 
     <script src="layout-loader.js"></script>
 
@@ -388,5 +388,7 @@
     <!-- Cloudflare Web Analytics -->
      <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "af1c2829514d4ed0ab6401de9f66a09b"}'></script>
      <!-- End Cloudflare Web Analytics -->
+      <div id="kairospy-footer"></div>
+    <script src="components.js"></script>
 </body>
 </html>
