--- a/special_ops.html
+++ b/special_ops.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 
-    <div id="navbar-placeholder"></div>
+    <div id="kairospy-header"></div>
 
     <header class="hero" style="height: 60vh;">
         <div class="container hero-content">
@@ -185,8 +185,6 @@
 
     </main>
 
-    <div id="footer-placeholder"></div>
-
     <script src="layout-loader.js"></script>
     <script>
 
@@ -196,5 +194,8 @@
         }
     </script>
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "af1c2829514d4ed0ab6401de9f66a09b"}'></script>
-     </body>
+    
+    <div id="kairospy-footer"></div>
+    <script src="components.js"></script>
+    </body>
 </html>
