--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,21 @@
     <main class="container section-padding">
         
         <div class="intel-grid">
+
+        <article class="intel-card">
+            <div class="intel-meta">
+                <span>ID: #TEC-001</span>
+                <span class="clearance-tag" style="border-color: var(--accent-primary); color: var(--accent-primary);">OPEN_ACCESS</span>
+            </div>
+            <h3><a href="intel-foundry-latency.html">The Write-Back Paradox: Bypassing Foundry Latency</a></h3>
+            <p class="intel-excerpt">
+                Why your "Real-Time" Ontology is lagging by 15 minutes. A technical guide on implementing Direct-Action Protocols for high-velocity operations.
+            </p>
+            <div class="intel-footer">
+                <span class="intel-date">FILED: AUG 14, 2025</span>
+                <a href="intel-foundry-latency.html" class="read-link">ACCESS_BRIEFING &rarr;</a>
+            </div>
+        </article>
             
             <article class="intel-card">
                 <div class="intel-meta">
