--- a/foundry_ops.html
+++ b/foundry_ops.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palantir Foundry Ops - KAIROSPY</title>
+    <meta name="description" content="Expert Palantir Foundry implementation. We architect Enterprise Ontologies, high-velocity Data Pipelines (PySpark), and Workshop applications. Independent Foundry architects for hire.">
+    <meta name="keywords" content="Palantir Foundry Architect, Ontology Design, Palantir AIP, Workshop Module, Slate, PySpark Data Engineering, Foundry Implementation Partner">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
