--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KAIROSPY | Operational Intelligence</title>
+    <meta name="description" content="KAIROSPY is a decentralized collective of elite engineers specializing in Palantir Foundry, Tactical Data Interfaces, and Industrial IoT. We deploy surgical technical expertise for enterprise operations.">
+    <meta name="keywords" content="Palantir Foundry Freelance, Data Architecture, Streamlit Dashboards, Industrial IoT, Edge AI, Operational Intelligence, Stealth Consultancy">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
