--- a/kinetic-edge.html
+++ b/kinetic-edge.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kinetic Edge - KAIROSPY</title>
+    <meta name="description" content="Custom Industrial IoT and Edge AI solutions. We design bespoke hardware sensors and deploy machine learning models on-device for hostile environments.">
+    <meta name="keywords" content="Industrial IoT, Edge AI, Custom PCB Design, 3D Printing Sensors, MQTT, TinyML, Hardware Engineering, Physical Data Extraction">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
