--- a/tactical_ui.html
+++ b/tactical_ui.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tactical UI - KAIROSPY</title>
+    <meta name="description" content="Rapid deployment of tactical data interfaces using Python and Streamlit. We build secure, AI-powered internal tools and dashboards for high-velocity teams without the frontend bloat.">
+    <meta name="keywords" content="Streamlit Developer, Python Dashboards, Enterprise Internal Tools, React Alternative, Data Visualization, Corporate UI/UX, LangChain Integration">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
