mejoras seo y de rendimiento

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+
+    <script type="application/ld+json">
+            {
+            "@context": "https://schema.org",
+            "@type": "ProfessionalService",
+            "name": "KAIROSPY",
+            "image": "https://kairospy.com/source/Logo_KAIROS.png",
+            "@id": "https://kairospy.com",
+            "url": "https://kairospy.com",
+            "telephone": "",
+            "email": "ops@kairospy.com",
+            "priceRange": "$$$",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Madrid",
+                "addressCountry": "ES"
+            },
+            "description": "Decentralized collective of elite engineers specializing in Palantir Foundry, Tactical Data Interfaces, and Industrial IoT.",
+            "knowsAbout": [
+                "Palantir Foundry",
+                "Ontology Design",
+                "Industrial IoT",
+                "Edge AI",
+                "Streamlit Development"
+            ]
+            }
+    </script>
+
 </head>
 <body>
 
@@ -18,7 +46,7 @@
         <div class="container hero-content">
             
             <div style="margin-bottom: 1.5rem;">
-                <img src="source/logo_nuevo_limpio.png" 
+                <img src="source/new_logo_small.png" 
                      alt="KAIROSPY IDENT" 
                      style="max-width: 400px; width: 100%; mix-blend-mode: lighten; opacity: 1.; filter: contrast(1.1);">
             </div>
