--- a/nav.html
+++ b/nav.html
@@ -14,8 +14,8 @@
             <li><a href="tactical_ui.html">Tactical_UI</a></li> 
             <li><a href="kinetic-edge.html">Kinetic</a></li>
             <li><a href="special_ops.html">Special_Ops</a></li> 
-            <li><a href="proyectos.html">Case_Files</a></li>
-            <li><a href="equipo.html">Network</a></li>
+            <li><a href="case_files.html">Case_Files</a></li>
+            <li><a href="network.html">Network</a></li>
         </ul>
     </div>
 </nav>
